[Switchboard] Upgrade java version to 11